# learn

./: .gitignore  .gitmodules  README.md
ML/: NaiveBayes.ipynb  dataInspect.ipynb  decisionTree.ipynb  embedding_pytorch.ipynb  embedding_tf.ipynb  pandas.ipynb  pca.ipynb  pytorch.ipynb  tf.ipynb  titanic_decision_tree.ipynb  xor.ipynb
ML/aliasSample/: alias_sample.h  alias_sample_dict.py  alias_sample_np.py  alias_torch.py
ML/aliasSample/cpp/: CMakeLists.txt  alias_torch.h  main.cpp
ML/imagesClustering/: CMakeLists.txt  README.md  dataset.h  main.cpp  wallpaper.cpp  wallpaper.h
ML/imagesClustering/include/: dataset.h  log.h  models.h  options.h  train.h  utils.h  wallpaper.h
ML/imagesClustering/src/: CMakeLists.txt  dataset.cpp  log.cpp  main.cpp  options.cpp  wallpaper.cpp
ML/imagesClustering/src/models/: dcn.cpp  dnn.cpp  fnn.cpp  models.cpp  rnn.cpp  vgg.cpp
ML/imagesClustering/test/: CMakeLists.txt  utils_test.cpp
ML/randomWalk/: random_walk_perf.py
ML/tf/: eager.ipynb  tf.ipynb  tf2_dist_multi_train.py  tf2_dist_train.py  tf2_train.py  timeline_keras.py
ML/vision/: README.md  filter.py  image.py  requirements.txt
cpplib/: lambda.cpp  log_utils.h  rss_mem.cc
cpplib/cmake/: CopyTarget.cmake
cpplib/cuda/: add.cu  info.cu
cpplib/effective/: newhandler.cpp  template.cpp  tmp.cpp
cpplib/multimap/: multimap.cpp
cpplib/opencv2lib/: CMakeLists.txt  README.md  build.cmd  build.sh  canny.cpp
cpplib/openmp/: Makefile  main.cpp
cpplib/pybind11/: Makefile  main.cpp  test.py
cpplib/rapidjson/: Makefile  data.json  schema_test.cc  serialize.cpp
cpplib/split_csr/: README.md  merge.py  split.cpp  split_pt.py
cpplib/std/: cv.cpp  printABMThreads.cpp  producer_customer.cpp  redirect.cpp
cpplib/std/block_queue/: CMakeLists.txt
cpplib/std/block_queue/src/: block_queue.h  main.cpp
cpplib/tbb/: addEdgesBenchmark.cpp  task_queue.cpp
cpplib/torch/: CMakeLists.txt  README.md  dataset.cpp  demo.cpp  learn.cpp  torch.cmake
golib/: webserver.go
misc/: ggtt.md  kernel-debug.md
net/gevent/: gevent.ipynb  httpserver.py  tcpserver.py  threadpool.py
net/tornado/: app.py  asyncclient.py  client.py
programming/cffi/: .gitignore  README.md  newton.c  newton.h  newton.ipynb  newton.py  newton_build.py
programming/groovy/: learn.groovy
programming/julia/: julia.ipynb  learn.jl
programming/scala/: learn.scala
pyspark/: create_graph.py
pythonlib/: bokeh.ipynb
pythonlib/bokeh/: bokeh.ipynb  table.py
pythonlib/boto3/: s3.py
pythonlib/config/: config.py  test_config.py
pythonlib/crypto/: crypto_utils.py
pythonlib/db/: mysql.py
pythonlib/ply/: README.md  aigc.grl  input.grl  parser.py
pythonlib/pyppeteer/: pyppeteer_demo.py
pythonlib/pyppeteer_demo/: jg.py  pyppeteer_demo.py
pythonlib/pytest_demo/: run_in_process.py  test_demo.py
pythonlib/pytorch/: distributed_demo.py
pythonlib/selenium_demo/: selenium_demo.py
pythonlib/tools/: timer.py
pythonlib/turicreate/: image_cls.py  image_similarity.py
tools/: README.md  cpu_count.py  find_pid_by_port.sh  gen_scp.sh  gen_ssh.sh  gpu_stat.py  multi_process_runner.py  profile_demo.py  rename.py
tools/filebrowser/: upload.py
tools/ftp/: ftpd.bat
tools/json/: json_formater.py
tools/kq/: config.yaml  kq_auto.py  kq_sele.py
vscode_extension/: context.ts  result.ts
